--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -150,3 +150,11 @@ body {
     height: 200px;
     object-fit: cover;  
    }
+  footer {
+      margin: 0px;
+      margin-top: 150px;
+      width: 100%;
+      height: 150px;
+      background-color: rgba(179, 173, 173, 0.363);
+  }
+  
