--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,28 @@
 
 /* tete de page */
+.row {
+ width: 1300px;
+
+}
 .logo {
     width: 150px;
     height: 100px;
+   
 }
 .titre {
     display: flex;
     justify-content :space-between;
     align-content: space-around;
+  
 }
+
 .liste {
     display: flex;
     align-content: space-around;
     padding: 25px;
-}
+   
+  }  
+
 .listeA {
     margin-top: 25px;
 }
@@ -62,7 +71,10 @@
    justify-content: center;
    flex-direction: column;
    align-items: center;
+   
 }
+
+
 
 
 
@@ -342,13 +354,13 @@
      color: rgb(165, 161, 161);
  }
 
- .bloc7 {
- 
-  height: 400PX;
+.bloc7 {
+    margin: 0px;
+    height: 400PX;
   width: 1300px;
   margin-top: 100px;
-  
- }
+}
+
 
 /*bloc3*/
  .activites {
@@ -443,4 +455,11 @@ p {
 
 /*bas de page*/
 
+footer {
+    margin-top: 50px;
+   
+    width: 100%;
+    height: 250px;
+    background-color:rgba(179, 173, 173, 0.363);
 
+}
