--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,41 @@
 
-/* tete de page */
-.row {
- width: 1300px;
+ /* titre */
+ .logo {
+     width: 150px;
+     height: 100px;
+    
+     
+ } 
+ .caca {display:flex;
+ flex-wrap: wrap;
+ margin-top: 3%;
+}
 
-}
-.logo {
-    width: 150px;
-    height: 100px;
-   
-}
-.titre {
+ .entete {
     display: flex;
-    justify-content :space-between;
-    align-content: space-around;
-  
-}
+    justify-content: space-between;
 
-.liste {
-    display: flex;
-    align-content: space-around;
+ }
+ .element {
+    margin-top: 15px;
     padding: 25px;
+    color: rgb(14, 135, 248);
+    font-family: sans-serif;
+    text-decoration:none;
+ 
+}
+ .trouve {
+    font-family: sans-serif;
+    }
+ .en { 
+    font-family: sans-serif;
+    color: rgba(0, 0, 0, 0.671);
    
-  }  
+     }
 
-.listeA {
-    margin-top: 25px;
-}
-.elementB {
-    padding: 25px;
-    color: rgb(14, 135, 248);
-    font-family: sans-serif;
-    text-decoration:none;
-
-}
-.elementC {
-    padding: 25px;
-    color: rgb(14, 135, 248);
-    font-family: sans-serif;
-    text-decoration:none;
-
-}
-.elementA {
-    padding: 25px;
-    color: rgb(14, 135, 248);
-    font-family: sans-serif;
-    text-decoration:none;
-
-}
-.element {
-    padding: 25px;
-    color: rgb(14, 135, 248);
-    font-family: sans-serif;
-    text-decoration:none;
-}
-.parti {
-    font-family: sans-serif;
-}
-.parti1 {
-    font-family: sans-serif;
-    color: rgba(63, 62, 62, 0.39);
-} 
-/* bare de recherche */
-.icone1 {
+ /* bare de recheche */ 
+ 
+ .icone1 {
     background-color:rgb(222, 224, 224);
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
@@ -74,19 +48,15 @@
    
 }
 
-
-
-
-
 .search {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 
 
     
     }
  .searchTerm {
-    width: 90%;
+    width: 100%;
     border: 2px solid rgb(214, 213, 213);
     border-right: none;
     padding: 8px;
@@ -106,360 +76,123 @@
     text-align: center;
     }
  .wrap{
-    width: 30%;
-    
+    width: 350px;
+   
+   
     } 
 
-/* filtre */
-  .filtre {
-      display: flex;
-      justify-content: flex-start;  
-      margin-top: 40px;
-  } 
-  .pati2 {
-      margin-right: 50px;
-      font-family: sans-serif;
-  }  
-  .resolu {
-    display: flex;
-    justify-content: flex-start;  
-    
-  }
+   /* filtre  */ 
+
+.fil { 
+    font-family: sans-serif;
+    margin-top: 50px;
+   
+
+} 
+ 
+
+/* position bouton */
+
+.resolu {
+    display: grid;
+    grid-template-columns: 50% 50%;
+ 
+  
+}
+.romen {
+ 
+
+ 
+}
+.wrap1 {
+ margin-top: 5%;
+}
+
+/* style bouton */
 
 
 .search1 {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start ;
 
 
-    
-    }
-
-    
- .searchButton1 {
-    width: 210px;
-    height: 40px;
-    border: 1px solid #b4b4b459;
-    background: #fdfdfd;
-    text-align:center;
-    color: #000000e5;
-    border-radius: 50px 50px 50px 50px;
-    font-size: 15px;
-    margin-right: 10px;
-    
-    
-   
-   
-    }
- 
-   
-    
-    
-    .icone2 {
-        background-color:rgba(100, 140, 194, 0.363);
-       border-radius: 100%;
-        height: 40px;
-        width: 40px;
-        color: rgb(4, 48, 168);
-       display: flex;
-       justify-content: center;
-       flex-direction: column;
-       align-items: center;
-       position: absolute;
-       
-       
-    }
-    .parti4 {
-        display: flex;
-        align-items: flex-start;
-    }
-    
-
-    .info {
-        background-color:rgba(253, 253, 253, 0.363);
-       border-radius: 100%;
-        height: 40px;
-        width: 40px;
-        color: rgb(4, 48, 168);
-       display: flex;
-       justify-content: center;
-       flex-direction: column;
-       align-items: center;
-       border: 1px solid #b4b4b459;
-       margin-top: 25px;
-       
-    }
-    .para {
-        margin-top: 25px;
-        margin-left: 15px;
-        font-family: sans-serif;
-        color: rgb(194, 191, 191);
-    }
-
-
-    .loge {
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-        
-       
-        
-        
-    }
-
-
-
-    .bloc {
-        display: flex;
-        justify-content: center;
-        margin-top: 25px;
-        
-    }
-
-    .bloc3 {
-        display: flex;
-        justify-content: space-evenly;
-       
-    }
- /*bloc 1 bloc 2*/
-    
-  .bloc1 {
-      background-color: rgb(233, 231, 231);
-      height: 800px;
-      width: 850px;
-      border-radius: 25px;
-  }
-
-
-
-
-  .sousitre2 {
-     margin-left: 25px;
-     margin-top: 25px;
-     font-family: sans-serif;
-
-
-
-  }
- 
-  .image {
-     
-      height: 170px;
-      border-top-left-radius: 25px;
-      border-top-right-radius: 25px;
-      object-fit: cover;
-  }
-
-
-  .bloc2 {
-      background-color:rgb(233, 231, 231);
-      height: 800px;
-      width: 400px;
-      margin-left: 50px;
-      border-radius: 25px;
-
-  }
-   
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 30%;
-    margin-top: 10px;
-    border-radius: 25px;
-    background-color: rgb(255, 255, 255);
-    padding: 0.3rem;
-    margin-bottom: 25px;
-    
-   
-   }
- 
-       
-   
-
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
   
-  .container {
-    padding: 2px 16px;
   }
 
-  .bloc4 {
-    display: flex;
-    justify-content: space-evenly;
-   
-} 
-
-.sousboton {
-    
-    padding: 25px;
-    color: rgb(0, 0, 0);
-    font-family: sans-serif;
-    text-decoration:none;
-
-}
-
-
-.soutitre3 {
-    display: flex;
- }
-
- .icone3 {
-     margin-top: 25px;
-     margin-left: 200px;
- }
-
-
-
- .card1 {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    height: 150px;
-    width: 350px;
-    margin-top: 10px;
-    border-radius: 25px;
-    background-color: rgb(255, 255, 255);
-    padding: 0.3rem;
-    margin-bottom: 100px;
-    display: flex;
-    margin-left: 25px;
-   
- }
-
- .image1 {
-     
-     height: 150px;
-     width: 130px;
-     margin-right: 15px;
-     border-bottom-left-radius: 25px;
-     border-top-left-radius: 25px;
-     object-fit: cover;
-     
- }
- .container1 {
-     margin-right: 50px;
- }
-
-
- .blocdiago {
-     margin-top: 50p;
- }
+  
+.searchButton1 {
+  width: 210px;
+  height: 40px;
+  border: 1px solid #b4b4b459;
+  background: #fdfdfd;
+  text-align:center;
+  color: #000000e5;
+  border-radius: 50px 50px 50px 50px;
+  font-size: 15px;
+  margin-right: 10px;
+  
+  
  
- .icone4 { 
+ 
+  }
+
+ 
+  
+  
+  .icone2 {
+      background-color:rgba(100, 140, 194, 0.363);
+     border-radius: 100%;
+      height: 40px;
+      width: 40px;
+      color: rgb(4, 48, 168);
      display: flex;
-     color: rgb(25, 25, 240);
- }
- .icone5 {
-     
-     color: rgb(165, 161, 161);
- }
-
-.bloc7 {
-    margin: 0px;
-    height: 400PX;
-  width: 1300px;
-  margin-top: 100px;
-}
-
-
-/*bloc3*/
- .activites {
-    height: 440px;
-    
+     justify-content: center;
+     flex-direction: column;
+     align-items: center;
+     position: absolute;
      
      
-     
- }
- .activites1 {
-   
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-   border-radius: 25px;
-   height: 230px;
+  }
 
-  
-   
-   
-    
-}
-.activites6 {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 25px;
-    
-} 
-.activites3 {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 25px;
-    
-} 
-p {
-    margin-left: 15px;
-   
-}
-.activites4 {
-   
-    height: 200px;
-    border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    
-
-}
-.activites5 {
-    
-    
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    height: 200px;
-    margin-top: 40px;
-    border-radius: 25px;
-}
-.activites2 {
-    
-    margin-top: 50px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 25px;
-    height: 160px;
-}
-.act {
+   /* info */ 
+ /* postion info */
+ .parti4 {
     display: flex;
-    justify-content: space-between;
-}
-.image2 {
- border-top-left-radius: 25px;
- border-top-right-radius: 25px;
- width: 250px;
- height: 390px;
- object-fit: cover;
-}
-.image3 {
-    border-top-left-radius: 25px;
- border-top-right-radius: 25px;
- width: 250px;
- height: 150px;
-
-}
-.image4 {
-    border-top-left-radius: 25px;
- border-top-right-radius: 25px;
- width: 250px;
- height: 180px;
- object-fit: cover;
-}
-.image5 {
-    border-top-left-radius: 25px;
- border-top-right-radius: 25px;
- width: 250px;
- height: 110px;
- object-fit: cover;
-}
-
-
-
-/*bas de page*/
-
-footer {
-    margin-top: 50px;
-   
-    width: 100%;
-    height: 250px;
-    background-color:rgba(179, 173, 173, 0.363);
-
-}
+  }
+  
+  /* style info */
+  .info {
+      background-color:rgba(253, 253, 253, 0.363);
+     border-radius: 100%;
+      height: 30px;
+      width: 30px;
+      color: rgb(4, 48, 168);
+     display: flex;
+     justify-content: center;
+     flex-direction: column;
+     align-items: center;
+     border: 1px solid #b4b4b459;
+     margin-left: 15%;
+    margin-top: 15px;
+     margin-right: 15px;
+     
+  }
+  
+  
+  
+  .para {
+     margin-left: 2%;
+      font-family: sans-serif;
+      color: rgb(194, 191, 191);
+  }
+  
+  
+  .loge {
+      display: flex;
+      justify-content: center;
+      margin-top: 50px;
+      
+     
+      
+      
+  }
