--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,32 @@
  /* titre */
  .logo {
      width: 100px;
-     height: 50px;
+     height: 70px;
     
      
  } 
 
+.logo1 {
+   display: grid;
+   grid-template-columns: 70% 10% 10%;
+   
 
- .entete {
-  
- }
- .ins
- { 
-     display: flex;
-     
+}
+ 
+.ins {  
+    display: flex;
+     margin-top: 20px;
+    
  }
  .heber{
-   
+   display: flex;
+   margin-top: 20px;
    
 
  }
  .element {
     margin-top: 15px;
-    
+    margin-right: 60px;
     color: rgb(14, 135, 248);
     font-family: sans-serif;
     text-decoration:none;
@@ -55,7 +59,7 @@
 .search {
     display: flex;
     justify-content: center;
-
+    
 
     
     }
@@ -80,20 +84,26 @@
     text-align: center;
     }
     .wrap {
-    width: 95%;
-     margin-left: 12px;
+     width: 400px;
+     margin-left: 2px;
     
      } 
 
    /* filtre  */ 
 
+ .position {
+     
+     display: flex;
+ } 
+
 .fil { 
     font-family: sans-serif;
-    margin-top: 50px;
-    
-   
+    margin-right: 30px;
+   margin-top: 55px;
 
 } 
+
+
  
 
 /* position bouton */
@@ -106,14 +116,15 @@
     display: grid;
     grid-template-columns: 50% 50%;
    
-    
+    margin-top: 50px;
  
   
 }
 .romen {
  display: flex;
  flex-wrap: wrap;
- margin-bottom: 0px;
+ margin-top: 50px;
+
 
  
 }
@@ -188,6 +199,9 @@
   }
   
   /* style info */
+  .parti4 {
+      margin-top: 20px;
+  }
   .info {
       background-color:rgba(253, 253, 253, 0.363);
      border-radius: 100%;
@@ -223,3 +237,315 @@
       
       
   }
+ /* regroupement*/
+ .regroup {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    /*background-color: rgb(226, 225, 225);*/
+ } 
+
+
+  /* bloc1 */ 
+  
+.bloc1 {
+    width: 400px;
+    height: 750px;
+    background-color: rgb(226, 225, 225);
+    margin-top: 15px;
+    margin-left: px;
+    border-radius: 25px;
+ 
+}
+.sousitre2 { 
+    margin-left: 30px;
+    font-family: sans-serif;
+     }
+
+.soutitre3 {
+    display: grid;
+    grid-template-columns: 90% 10% ;
+   
+}   
+.cartouche {
+ display: flex;
+ flex-direction: column;
+ margin-left: 10%;
+ 
+  
+}
+
+.icone3 {
+    margin-top: 25px;
+} 
+ /* card1*/
+
+
+.card1 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 200px;
+    width: 320px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    margin-bottom: 15px;
+    display: flex;
+    margin-left: 2%;
+ 
+    
+   
+}
+
+ .image1 {
+     border-bottom-left-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+     margin-right: 25px;
+     width: 150px;
+
+ }
+ .bi  {
+    color: rgb(4, 48, 168);
+ }
+ .bi1 {
+
+    color: rgba(63, 63, 63, 0.363);
+ }
+ .icone4 {
+     margin-top:80px;
+
+ }
+/* bloc2 */
+
+ .bloc2 {
+    width: 1100px;
+     height: 750px;
+     background-color: rgb(226, 225, 225);
+     margin-top: 15px;
+     border-radius: 25px;
+
+ }
+
+
+.card2 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 270px;
+    width: 320px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    margin-bottom: 15px;
+    margin-left: 2%;
+  
+ 
+    
+   
+}
+
+
+ .image2 {
+     border-top-right-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+   
+     width: 320px;
+     height: 150px;
+
+ }
+ .bi  {
+    color: rgb(4, 48, 168);
+ }
+
+ .container2 {
+    margin-left: 5%;
+   
+ }
+ .contenent {
+     display: flex;
+ }
+
+ .cartouche1 {
+  display:flex;
+   margin-left: 2%;
+ 
+ }
+
+ .affiche {
+    margin-top: 15px;
+     padding: 25px;
+     color: #070707;
+     font-family: sans-serif;
+     text-decoration:none;
+     
+ }
+ h3 {
+     margin-left: 5%;
+ }
+/* activiter */ 
+
+.card3 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 150px;
+    width: 320px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    margin-bottom: 20px;
+  
+ 
+    
+   
+}
+
+
+ .image3 {
+     border-top-right-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+   
+     width: 320px;
+     height: 100px;
+
+ }
+ .cartouche3 {
+     margin-left: 2%;
+     display: flex;
+     justify-content: space-between;
+
+
+ }
+ .card3 {
+     margin-left: 2%;
+ }
+
+ .container3 {
+     margin-left: 2%;
+ }
+
+
+
+
+
+
+.card4 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 350px;
+    width: 280px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    margin-bottom: 20px;
+  
+ 
+    
+   
+}
+
+
+ .image4 {
+     border-top-right-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+   
+     width: 280px;
+     height: 300px;
+
+ }
+ .cartouche4 {
+    
+ }
+ .card4 {
+     margin-left: 2%;
+ }
+
+ .container4 {
+     margin-left: 2%;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .image5 {
+    border-top-right-radius: 25px;
+    border-top-left-radius: 25px;
+    object-fit: cover;
+  
+    width: 320px;
+    height: 130px;
+
+}
+.cartouche5 {
+    margin-left: 2%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card5 {
+    margin-left: 2%;
+}
+
+.container5 {
+    margin-left: 2%; 
+}
+
+
+
+
+.card5 {
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   transition: 0.3s;
+   height: 180px;
+   width: 320px;
+   border-radius: 25px;
+   background-color: rgb(255, 255, 255);
+   padding: 0.3rem;
+   margin-bottom: 20px;
+ 
+
+   
+  
+}
+
+
+ /* base de page */ 
+
+ .fin_de_page {
+    background-color: rgb(233, 231, 231);
+    height: 400px;
+    width: 102%;
+    display: flex;
+
+   
+    
+ }
+ .propo {
+    width: 300px; 
+    height: 150px;
+     display: flex;
+     flex-direction: column;
+    margin: 5%; 
+   
+ }
+
+ a {
+     color: rgb(129, 122, 122);
+    font-family: sans-serif;
+    text-decoration:none;
+     margin: 1%;
+ }
+ h4 {
+    font-family: sans-serif;
+ }
+ 
