--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -179,6 +179,7 @@
 }
 .icone_info_plasement {
     width: 80px;
+
     display:flex;
     justify-content: flex-end;
 
@@ -196,3 +197,71 @@
   
 }
 
+/*navigation*/
+/*bloc*/ 
+
+ .bloc {
+     width: auto;
+     height: 625px;
+     display: flex;
+     justify-content: space-around; 
+     margin-top: 50px; 
+
+ }
+ .bloc_titre {
+     padding-left: 25px;
+ }
+ 
+
+/*premier_bloc*/
+
+.bloc_1 {
+    width: 872px;
+    height: 625px;
+    background-color:rgb(214, 213, 213); 
+    border-radius: 25px;
+}
+/*cards_alinement*/
+.cards_alinement{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card_1 {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 200px;
+    width: 240px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    padding: 0.3rem;
+    margin-bottom: 15px;  
+ }
+ 
+ 
+ .image_1 {
+     border-top-right-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+     width: 225px;
+     height: 105px;
+ 
+ }
+ .container_1 {
+    margin-left: 5%;
+   
+ }
+
+ .afiche {
+     color: #000;
+     text-decoration:none;
+     padding-left: 50px;
+ }
+
+/*deuxime_bloc*/
+.bloc_2 {
+    width: 413px;
+    height: 625px;
+    background-color:rgb(214, 213, 213); 
+    border-radius: 25px;
+}
