--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -200,6 +200,8 @@
 /*navigation*/
 /*bloc*/ 
 
+
+
  .bloc {
      width: auto;
      height: 625px;
@@ -229,10 +231,6 @@
     display: flex;
     justify-content: space-around;
 }
-.dimention {
-    height: 235px;
-    
-}
 
 
 .card_1 {
@@ -240,7 +238,7 @@
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: .3s;
+    transition: 0.3s;
     height: 230px;
     width: 240px;
     border-radius: 25px;
@@ -262,7 +260,6 @@
  .container_1 {
    display: flex;
    flex-direction: column;
-   justify-content:space-evenly;
    text-align:left;
    margin-left:10px;
    margin-top: 10px;
@@ -297,9 +294,58 @@
 
 
 /*deuxime_bloc*/
+
 .bloc_2 {
     width: 413px;
     height: 625px;
     background-color:rgb(214, 213, 213); 
     border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
+
+/*cards_2*/
+.bloc_titre_2 {
+    margin: 0;
+    margin-left: 50px;
+}
+
+
+
+.card_2 {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    height: 140px;
+    width: 340px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(247, 248, 248);
+    margin-left: 30px;
+    
+ }
+ 
+ 
+ 
+ .image_2 {
+     border-bottom-left-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+     width: 130px;
+     height: 130px;
+    
+ 
+ }
+
+ .container_2 {
+   display: flex;
+   flex-direction: column;
+  
+   text-align:left;
+   margin-left:10px;
+   margin-top: 10px;
+ }
+
+
