--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -18,6 +18,7 @@
 .menu {
     display: flex; 
     justify-content: space-around;
+ 
    
 }
 .menu_1  {
@@ -28,7 +29,6 @@
 }
 .menu_2 {
     padding: 40px;
-
     padding-top: 37px;
 }
 
@@ -113,9 +113,9 @@
 /*filtre*/
 .filtre {
   display: flex; 
-  padding-top: 50px;   
+  padding-top: 50px; 
+  
 }
-
 .titre_fitres{
     margin: 0;
     padding-top: 10px;
@@ -128,6 +128,7 @@
     width: 900px;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     
 }
 
@@ -203,33 +204,44 @@
 
 
  .bloc {
-     width: auto;
-     height: 625px;
-     display: flex;
-     justify-content: space-around; 
+     
+     display:grid;
+     grid-template-columns: 60% 30% ;
+     gap: 25px;
      margin-top: 50px; 
+     justify-content: center;
+     flex-wrap: wrap;
+    
 
  }
  .bloc_titre {
      padding-left: 50px;
+     
  }
  
 
 /*premier_bloc*/
 
+
 .bloc_1 {
-    width: 872px;
-    height: 625px;
-    background-color:rgb(214, 213, 213); 
+    height: auto;
+    width: auto;
+    background-color:rgb(236, 236, 236); 
+    border-radius: 25px;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    
+    
 }
 /*cards_alinement*/
 .cards_alinement{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+   
+    
+  
 }
 
 
@@ -237,14 +249,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 230px;
     width: 240px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: aliceblue;
-    
+    margin-top: 15px;
  }
  
  
@@ -261,7 +273,6 @@
    display: flex;
    flex-direction: column;
    text-align:left;
-   margin-left:10px;
    margin-top: 10px;
  
    
@@ -287,43 +298,55 @@
    
 
  .afiche {
+     margin: 0;
+     padding: 0;
      color: #000;
      text-decoration:none;
-     padding-left: 50px;
+     margin-left: 25px;
+   
  }
 
 
 /*deuxime_bloc*/
 
-.bloc_2 {
-    width: 413px;
-    height: 625px;
-    background-color:rgb(214, 213, 213); 
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
+
 
 /*cards_2*/
-.bloc_titre_2 {
-    margin: 0;
-    margin-left: 50px;
-}
+.populair {
+    display: flex;
+    justify-content: space-between; 
+      
+  }
 
+  .icone_graphique {
+     padding-top: 20px; 
+  }
+
+.bloc_2 {
+    
+    height: auto;
+    border-radius: 25px;
+    display: grid;
+    grid-template-rows: 10% 25% 25%;
+    gap: 15px;
+    flex-wrap: wrap;
+    
+    
+}
 
 
 .card_2 {
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 140px;
-    width: 340px;
+    width: 330px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: rgb(247, 248, 248);
-    margin-left: 30px;
+
+
     
  }
  
@@ -342,10 +365,21 @@
  .container_2 {
    display: flex;
    flex-direction: column;
-  
    text-align:left;
-   margin-left:10px;
    margin-top: 10px;
  }
+ .icone_etoile_2 {
+    display: flex;
+    color: rgb(18, 83, 223);
+    padding-top: 35px;
 
+}
+.marge
+{
+    min-width: 340px;
+    border-radius: 25px;
+    display:flex;
+    justify-content: center;
+    background-color:rgb(236, 236, 236); 
+}
 
