--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -207,7 +207,7 @@
      
      display:grid;
      grid-template-columns: 60% 30% ;
-     gap: 25px;
+     gap: 55px;
      margin-top: 50px; 
      justify-content: center;
      flex-wrap: wrap;
@@ -328,7 +328,7 @@
     border-radius: 25px;
     display: grid;
     grid-template-rows: 10% 25% 25%;
-    gap: 15px;
+    gap: 20px;
     flex-wrap: wrap;
     
     
@@ -383,3 +383,95 @@
     background-color:rgb(236, 236, 236); 
 }
 
+/*activiter*/ 
+.titre_bloc_3 {
+    padding-left: 50px;
+}
+
+.bloc_3 {
+  
+ 
+
+}
+
+.card_3 {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 15px;
+    
+    
+   
+}
+
+.groupe_card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+
+
+/*style_cards_3*/
+.card_3_1 {
+   width: 300px;
+   height: 440px ;
+   border-radius: 25px;
+   box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+   transition: 0.3s;
+   margin-top: 15px;
+   
+}
+.image_3 {
+    width: 300px;
+    height: 390px;
+    border-radius: 25px 25px 0 0;
+    object-fit: cover;
+}
+
+
+
+
+
+ .card_3_3 {
+     width: 300px;
+     height: 240px;
+     border-radius: 25px;
+     box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+     transition: 0.3s;
+     margin-top: 15px;
+ }
+
+ .image_3_2 {
+     width: 300px;
+     height: 200px;
+     border-radius: 25px 25px 0 0;
+     object-fit: cover;
+ }
+
+ .card_3_2 {
+    width: 300px;
+    height: 160px;
+    border-radius: 25px;
+    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin-top: 15px;
+}
+
+.image_3_1 {
+    width: 300px;
+    height: 120px;
+    border-radius: 25px 25px 0 0;
+    object-fit: cover;
+}
+.container_3 {
+   padding-left: 15px;
+   padding-top: 5px;
+}
+
+.texte_style {
+    color: #000;
+    text-decoration:none;
+   
+}
