--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -60,11 +60,17 @@
 /*titre*/
 
 .titre {
-    margin-left: 48px ;
+    width: 525px;
+    display: flex;
+    justify-content: flex-end;
+    
 }
 
 .soustitre {
     color: rgb(185, 180, 180);
+    width: 315px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 /*barre_de_recherche*/
@@ -90,11 +96,7 @@
     outline: none;
 }
 
-::placeholder {
-    color: #000;
-    padding-left: 5px;
-}
-
+ 
 .recherche_bouton {
     width: 150px ;
     height: 40px;
@@ -140,7 +142,7 @@
     padding-right: 1rem;
     border-radius: 25px 25px 25px 25px;
     justify-content: space-between;
-    
+    border-left: none;
 
 }
 
@@ -162,6 +164,7 @@
   cursor: pointer;
   padding-top: 0.8rem;
   padding-left: 1rem;
+  
 
 }
 
@@ -210,13 +213,15 @@
      gap: 55px;
      margin-top: 50px; 
      justify-content: center;
-     flex-wrap: wrap;
+     
     
 
  }
  .bloc_titre {
-     padding-left: 50px;
      
+     width: 280px;
+    display: flex;
+    justify-content: flex-end; 
  }
  
 
@@ -251,7 +256,7 @@
     justify-content: space-between;
     box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
     transition: 0.3s;
-    height: 230px;
+    height: 240px;
     width: 240px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
@@ -264,8 +269,10 @@
      border-top-right-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 225px;
+     width: 240px;
      height: 128px;
+     border:solid 5px rgb(255, 255, 255);
+   
     
  
  }
@@ -273,13 +280,15 @@
    display: flex;
    flex-direction: column;
    text-align:left;
-   margin-top: 10px;
+  
+   border:solid 5px rgb(255, 255, 255);
  
    
  }
  h4 {
      margin: 0;
     height: 23px; 
+    color: #000;
  }
 
  p {
@@ -289,6 +298,7 @@
    .icone_etoile {
        display: flex;
        color: rgb(18, 83, 223);
+       border-top:solid 15px rgb(255, 255, 255);
    }
 
     .etoile_grise {
@@ -302,8 +312,9 @@
      padding: 0;
      color: #000;
      text-decoration:none;
-     margin-left: 25px;
-   
+     width: 140px;
+     display: flex;
+     justify-content: flex-end; 
  }
 
 
@@ -341,11 +352,11 @@
     box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 140px;
-    width: 330px;
+    width: 333px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: rgb(247, 248, 248);
-
+    
 
     
  }
@@ -357,21 +368,21 @@
      border-top-left-radius: 25px;
      object-fit: cover;
      width: 130px;
-     height: 130px;
-    
+     height: 140px;
+     border:solid 5px rgb(255, 255, 255);
  
  }
 
  .container_2 {
    display: flex;
    flex-direction: column;
-   text-align:left;
-   margin-top: 10px;
+   border:solid 15px rgb(255, 255, 255);
+   border-radius: 25px;
  }
  .icone_etoile_2 {
     display: flex;
     color: rgb(18, 83, 223);
-    padding-top: 35px;
+    border-top:solid 35px rgb(255, 255, 255);
 
 }
 .marge
@@ -385,14 +396,12 @@
 
 /*activiter*/ 
 .titre_bloc_3 {
-    padding-left: 50px;
+    width: 250px;
+    display: flex;
+    justify-content: flex-end; 
 }
 
-.bloc_3 {
-  
- 
 
-}
 
 .card_3 {
     display: flex;
@@ -475,3 +484,39 @@
     text-decoration:none;
    
 }
+
+/*fin_de_page*/
+.margine {
+    height: 55px;
+}
+
+.fin_de_page {
+    background-color: rgb(233, 231, 231);
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+ 
+   
+    
+ }
+ .propo {
+    width: 400px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 35px;
+    flex-wrap: wrap;
+   
+ }
+ 
+ a {
+     color: rgb(129, 122, 122);
+    font-family: sans-serif;
+    text-decoration:none;
+     margin: 1%;
+ }
+ h4 {
+    font-family: sans-serif;
+ }
