--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -208,11 +208,10 @@
 
  .bloc {
      
-     display:grid;
-     grid-template-columns: 60% 30% ;
-     gap: 55px;
+     display:flex;
      margin-top: 50px; 
-     justify-content: center;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
      
     
 
@@ -230,12 +229,13 @@
 
 .bloc_1 {
     height: auto;
-    width: auto;
+    width: 850px;
     background-color:rgb(236, 236, 236); 
     border-radius: 25px;
     border-radius: 25px;
     display: flex;
     flex-direction: column;
+
     
     
 }
@@ -243,7 +243,7 @@
 .cards_alinement{
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
+   flex-wrap: wrap;
    
     
   
@@ -262,6 +262,7 @@
     background-color: rgb(255, 255, 255);
     border-color: aliceblue;
     margin-top: 15px;
+    flex-wrap: wrap;
  }
  
  
@@ -387,6 +388,7 @@
 }
 .marge
 {
+    width: 400px;
     min-width: 340px;
     border-radius: 25px;
     display:flex;
@@ -416,7 +418,7 @@
 .groupe_card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     
 }
 
