--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -9,8 +9,20 @@
    
  
 }
+a.bouton_1:hover {
+    border-top: solid 3px;
+    color: rgb(3, 70, 214);
+    padding-top: 50px;
+    padding: 50px;
 
 
+}
+a.bouton:hover {
+   border-top: solid 3px;
+   color: rgb(3, 70, 214);
+   padding-top: 50px;
+   padding: 50px;
+    }
 
 .menu_logo {
   
@@ -28,33 +40,26 @@
 .menu { 
   display: flex;
   justify-content: space-evenly;
-  
+  margin-top: 50px;
 
 }
 
 .menu_3 {
-    padding-top: 35px;
-    padding-right: 5rem;
+    padding-top: 50px;
+   
+}
+
+.menu_1 {
+ padding-top: px;
 }
 
 
-.menu_1  {
-    padding-top: 2rem;
-    border-top: solid 2px rgb(3, 70, 214); 
-    
-    
-}
-.menu_2 {
-  
-    padding-top: 35px;
-  
-}
 
 /*style bouton*/
 
 
 .bouton {
-    color: rgb(3, 70, 214);
+    color: rgb(185, 180, 180);
     text-decoration:none;
    
   
@@ -71,14 +76,18 @@
 .bouton_2 {
     color: rgb(3, 70, 214);
     text-decoration:none;
-    font-weight: bold;
+   
     padding-top: 150px;
     
-        margin-left: 5rem;
+     margin-left: 5rem;
 
     
   
 }
+.bouton_2:hover {
+    font-weight: bold;
+}
+
 
 /*titre*/
 
@@ -134,6 +143,10 @@
     text-align: center;
     border: none;
     cursor: pointer;
+}
+.recherche_bouton:hover {
+    color: rgb(179, 177, 177);
+    
 }
 .point_recherche {
     text-align: center;
@@ -227,10 +240,23 @@
   cursor: pointer;
   padding-top: 0.8rem;
   padding-left: 1rem;
+
   
 
 }
+.boutton_icone:hover {
+    background: rgba(188, 209, 247, 0.603); 
+     
+    }
 
+.boutton_icone_1:hover {
+        background: rgba(188, 209, 247, 0.603); 
+         
+        } 
+.boutton_icone_2:hover {
+         background: rgba(188, 209, 247, 0.603); 
+             
+            }
 /*soutire*/ 
 .info {
     display: flex;
@@ -319,7 +345,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 240px;
     width: 240px;
@@ -330,6 +356,9 @@
     flex-wrap: wrap;
     color: #000;
     text-decoration:none;
+ }
+ .card_1:hover {
+    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
  }
  
  
@@ -417,7 +446,7 @@
 .card_2 {
     display: flex;
     justify-content: space-between;
-    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 140px;
     width: 333px;
@@ -429,7 +458,10 @@
 
     
  }
- 
+
+ .card_2:hover{
+    box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.2)
+ }
  
  
  .image_2 {
@@ -491,7 +523,6 @@
 }
 
 
-
 /*style_cards_3*/
 .card_3_1 {
    width: 300px;
@@ -551,7 +582,12 @@
 
 .texte_style {
     color: #000;
-    text-decoration:none;
+    text-decoration: none;
+   
+}
+.texte_style:hover {
+    font-weight: bold;
+   
    
 }
 
@@ -589,7 +625,10 @@
      text-decoration:none;
     
  }
-     
+
+ .pro:hover {
+    font-weight: bold;
+ }
 
 
 
