--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -37,6 +37,8 @@ a.bouton:hover {
  
 
 }
+
+
 .menu { 
   display: flex;
   justify-content: space-evenly;
@@ -52,7 +54,11 @@ a.bouton:hover {
 .menu_1 {
  padding-top: px;
 }
-
+@media screen and (min-width: 630px){
+    .ligne {
+        display: none;
+    }
+}
 
 
 /*style bouton*/
@@ -76,9 +82,7 @@ a.bouton:hover {
 .bouton_2 {
     color: rgb(3, 70, 214);
     text-decoration:none;
-   
     padding-top: 150px;
-    
      margin-left: 5rem;
 
     
@@ -132,7 +136,7 @@ a.bouton:hover {
     color: #000;
 }
 
- 
+@media screen and (min-width: 630px) {
 .recherche_bouton {
     width: 150px ;
     height: 40px;
@@ -143,7 +147,15 @@ a.bouton:hover {
     text-align: center;
     border: none;
     cursor: pointer;
+    
 }
+  .recherche_bouton_1 {
+      display: none;
+  }
+
+ }
+
+
 .recherche_bouton:hover {
     color: rgb(179, 177, 177);
     
@@ -335,6 +347,7 @@ a.bouton:hover {
     display: flex;
     justify-content: space-around;
    flex-wrap: wrap;
+   width: 100%;
    
     
   
@@ -377,7 +390,7 @@ a.bouton:hover {
    display: flex;
    flex-direction: column;
    text-align:left;
-  
+   border-radius: 25px;
    border:solid 5px rgb(255, 255, 255);
  
    
@@ -395,8 +408,11 @@ a.bouton:hover {
    .icone_etoile {
        display: flex;
        color: rgb(18, 83, 223);
-       border-top:solid 15px rgb(255, 255, 255);
-   }
+     
+       
+        border-top:solid 15px rgb(255, 255, 255);
+    }
+ 
 
     .etoile_grise {
         color: rgb(197, 191, 191);
@@ -405,14 +421,17 @@ a.bouton:hover {
    
 
  .afiche {
-     margin: 0;
-     padding: 0;
+     padding: 15px;
      color: #000;
      text-decoration:none;
      width: 140px;
      display: flex;
      justify-content: flex-end; 
  }
+ .afiche:hover {
+    font-weight: bold;
+ }
+ 
 
 
 /*deuxime_bloc*/
@@ -644,7 +663,6 @@ a.bouton:hover {
 
 .img_logo { 
     padding: 0;
-   position: absolute;
   padding-left: 2rem;
    
  
@@ -659,57 +677,52 @@ a.bouton:hover {
   .bouton_2 {
     margin-left: 0rem;
 }
-  .bouton {
-     
-     margin-left: 5rem;
+ 
+  .menu {
+      display: none;
   }
-
-  .bouton_1 {
-     margin-left: 1rem;
-  }
+  
 .menu_logo {
     display: flex;
     width: auto;
     
   }
 
-  .menu {
-      padding-top: 5rem;
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      display: flex;
-    
-      
-      
-  }
-  .menu_4 {
-    display: flex;
-    width: 100%;
-    justify-content: right;  
+.ligne {
+   display: flex;
+   justify-content: space-evenly;
+   padding-top: 20px;
    
-  }
-  .menu_1 {
-      border: 0rem;
-      margin-top: 2px;
-  }
+  
+}
+.bouton_5 {
+    border-bottom: solid 3px;
+    width: 100%;
+    color: rgb(185, 180, 180);
+    text-decoration: none;
+    text-align: center;
+    padding-bottom: 10px;
+}
+.bouton_6 {
+    border-bottom: solid 3px;
+    width: 100%;
+    color: rgb(185, 180, 180);
+    text-decoration: none;
+    text-align: center;
+}
+a.bouton_5:hover {
+    border-bottom: solid 3px;
+    color: rgb(3, 70, 214);
+    width: 100%;
+     }
+ a.bouton_6:hover {
+        border-bottom: solid 3px;
+        color: rgb(3, 70, 214);
+        width: 100%;
+         }
+       
 
 
-  .linege_1 {
-      width: 100%;
-      height: 2px;
-      background-color:rgb(3, 70, 214);;
-  }
-
- .linege_2 {
-      width: 100%;
-      height: 2px;
-      background-color:rgb(185, 180, 180);
-  }
-  .linege {
-      display: flex;
-      margin-top: 1rem;
-  }
 
   /*titre*/
   .titre {
@@ -723,13 +736,46 @@ a.bouton:hover {
     width: auto;
     display: flex;
     justify-content: center;
+    margin-bottom: 25px;
 }
    /*barre_de_recherche*/
    .recherche {
     width: auto;
     display: flex;
     justify-content: center;
+
 }
+.text_recherche {
+    width: 240px;
+}
+.titre_fitres {
+ width: 70px;
+   
+}
+.recherche_bouton_1 {
+    width: 50px ;
+    height: 40px;
+    background-color:rgb(3, 70, 214) ;
+    color: rgb(252, 252, 252);
+    border-radius: 10px 10px 10px 10px;
+    font-size: 20px;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+   
+}
+
+.recherche_bouton {
+    display: none;
+}
+::placeholder {
+    color: #000;
+    font-weight: bold;
+    padding-left: 5px;
+}
+
+
+
 /*filtre*/
 .res {
     width: auto;
@@ -757,12 +803,67 @@ a.bouton:hover {
     justify-content: center;
     margin-left: 1rem;
 }
-
-
-
-
-
-
-
-
+/*navigation*/
+/*bloc*/
+.bloc {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+   
 }
+
+.cards_alinement {
+    width: 100%;
+   display: flex;
+   
+   
+
+ 
+   
+}
+
+.bloc_1 {
+   width: 100%;
+    background-color: white;
+  
+
+    
+ }
+
+
+ 
+ .card_1 {
+    height: 210px;
+    width: 340px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+   
+ }
+
+ .image_1 {
+     border-top-right-radius: 25px;
+     border-top-left-radius: 25px;
+     object-fit: cover;
+     width: 340px;
+     height: 110px;
+     border:solid 5px rgb(255, 255, 255);
+   
+    
+ 
+ }
+ .marge{
+   width: 100%;
+   border-radius: 0;
+ }
+  p {
+      height: 18px; 
+  }
+
+ 
+  }
+
+
+
+
+
+
