--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -472,12 +472,13 @@ a.bouton:hover {
   
 
 .bloc_2 {
-    height: auto;
+  
     border-radius: 25px;
     display: flex;
     justify-content: center;
-   
+    gap: 10px;
     flex-wrap: wrap; 
+
   
 }
 
@@ -509,7 +510,6 @@ a.bouton:hover {
     color: #000;
     text-decoration:none;
 
-    
  }
 
  .card_2:hover{
@@ -542,11 +542,7 @@ a.bouton:hover {
 
   
 
-.tablet {
-    display: flex;
-   
-      
-}
+
  
 
 
