--- a/css/style.css
+++ b/css/style.css
@@ -610,6 +610,12 @@ a.bouton:hover {
      margin-top: 15px;
  }
 
+ .image_3_2_1 {
+    width: 300px;
+    height: 200px;
+   
+}
+
  .image_3_2 {
      width: 300px;
      height: 200px;
